Fri Oct 11 18:34:19 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/expr.rb : Add event notifications in order to cover
	  all kinds of expression evaluations.
	* lib/adlint/cc1/interp.rb : Ditto.
	* lib/adlint/cc1/mediator.rb : Ditto.

	* lib/adlint/cc1/value.rb : Add ScalarValueFactory#of_null method to
	  confine a knowledge about representation of NULL to one place.

Thu Sep 19 16:55:45 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/syntax.rb : Fix incomplete expression-constancy check
	  under the constraits of ISO C99 standard.

Fri Sep 13 16:51:25 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.rc : 3.2.3
	  - Relax limitation of filename of the exam-package catalog.
	  - Fix code metric measurement so that metrics of the function defined
	    in the header file can be measured.
	  - Add templates for gcc 4.4.7 on CentOS 6.4 (x86_64).

Fri Sep 13 15:53:25 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/exam/c_builtin/cc1_metric.rb : Fix code metric measurement
	  in order to output FL_STMT and FL_FUNC metrics correctly.

Tue Sep 10 16:37:34 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* etc/conf.d/x86_64-centos_6.4/traits-gcc_4.4.7.erb : Add templates for
	  gcc 4.4.7 on CentOS 6.4 (x86_64).
	* etc/conf.d/x86_64-centos_6.4/cinit-gcc_4.4.7.erb : Ditto.
	* MANIFEST : Ditto.

Tue Sep 10 12:56:04 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/exam/c_builtin/cc1_metric.rb : Fix code metric measurement
	  so that metrics of the function defined in the header file can be
	  measured.

Fri Sep  6 18:46:53 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/exam/c_builtin/cpp_check.rb : Abbreviate wordy names.
	* lib/adlint/exam/c_builtin/cc1_code.rb : Ditto.
	* lib/adlint/exam/c_builtin/cc1_metric.rb : Ditto.
	* lib/adlint/exam/c_builtin/cpp_code.rb : Ditto.
	* lib/adlint/exam/c_builtin/cc1_check_shima.rb : Ditto.